[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
repository = "https://git.sr.ht/~gbmor/{{project-name}}"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

[profile.release]
opt-level = 3
lto = "thin"
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
incremental = true

[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
panic = "unwind"
incremental = true

[profile.bench]
opt-level = 3
lto = "thin"
debug = false
debug-assertions = false
overflow-checks = false
incremental = true

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

